mini fix sun's icon in dark mode (dark mode's icon)

--- a/src/app/components/todo-darkmode/todo-darkmode.component.scss
+++ b/src/app/components/todo-darkmode/todo-darkmode.component.scss
@@ -19,7 +19,7 @@
             font-size: 28px;
             width: 50px; 
             height: 50px; 
-            color: var(--app-black-color);
+            color: var(--app-sun-color);
             margin: 0;
         } 
     }   
