--- a/src/colors/colors.scss
+++ b/src/colors/colors.scss
@@ -20,6 +20,7 @@
     --navmenu-color-light-mode: #9f9e9e;
     --app-button-cancel: #cccccc;
     --app-button-background: #f9f9f9;
+    --app-sun-color: #000000;
 }  
 
 .dark-mode {
@@ -28,4 +29,5 @@
     --navmenu-color-light-mode: #717070; 
     --text-color: #ffffff;
     --primary-color: #bb86fc;
+    --app-sun-color: #ffffff;
 }
